# wechat-recruit-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/recruit_bot/: __init__.py  bot.py  config.py  feishu.py  inbox.py  main.py  qwen.py  service.py  wechat_article.py
tests/: test_article.py  test_config.py  test_feishu.py  test_inbox.py  test_service.py  test_summary.py
