[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-recruit-bot"
version = "0.1.0"
description = "Personal WeChat bot that summarizes recruitment posts and articles"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "openai>=1.50,<3",
  "pillow>=10,<13",
  "python-dotenv>=1,<2",
  "requests>=2.31,<3",
  "wechatbot-sdk>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
wechat-recruit-bot = "recruit_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
